# linux-ROS2-lvgl

./: README.md
learing_packagepython/: package.xml  setup.cfg  setup.py
learing_packagepython/learing_packagepython/: topic_test.py
lvgl/: CMakeLists.txt  lv_conf.h  main.cpp  package.xml  toolchain.cmake
lvgl/arm-bin/: main
lvgl/common/sys_manager/: sys_manager.c  sys_manager.h
lvgl/conf/: dev_conf.h
lvgl/gui_app/: CMakeLists.txt  ui.c  ui.cpp  ui.h
lvgl/gui_app/common/page_manager/: lv_lib_pm.c  lv_lib_pm.h
lvgl/gui_app/fonts/: ui_font_led32.c  ui_font_led90.c  ui_tomato_font32.c
lvgl/gui_app/images/: ui_img_tomato80x69.c
lvgl/gui_app/pages/ui_CalculatorPage/: app_CalculatorPage.c  app_CalculatorPage.h  ui_CalculatorPage.c  ui_CalculatorPage.h
lvgl/gui_app/pages/ui_CalendarPage/: ui_CalendarPage.c  ui_CalendarPage.h
lvgl/gui_app/pages/ui_ChatBotPage/: app_ChatBotPage.c  app_ChatBotPage.h  ui_ChatBotPage.c  ui_ChatBotPage.h
lvgl/gui_app/pages/ui_DrawPage/: ui_DrawPage.c  ui_DrawPage.h
lvgl/gui_app/pages/ui_Game2048Page/: ui_Game2048Page.c  ui_Game2048Page.h
lvgl/gui_app/pages/ui_GameMemoryPage/: ui_GameMemoryPage.c  ui_GameMemoryPage.h
lvgl/gui_app/pages/ui_GameMuyuPage/: ui_GameMuyuPage.c  ui_GameMuyuPage.h
lvgl/gui_app/pages/ui_HomePage/: ui_HomePage.c  ui_HomePage.h  ui_HomePages_btn.c
lvgl/gui_app/pages/ui_ROSTestPage/: ui_ROSTest.cpp  ui_ROSTest.h
lvgl/gui_app/pages/ui_SettingPage/: ui_SettingPage.c  ui_SettingPage.h
lvgl/gui_app/pages/ui_TimerPage/: ui_TimerPage.c
lvgl/gui_app/pages/ui_WeatherPage/: app_WeatherPage.c  ui_WeatherPage.c  ui_WeatherPage.h
lvgl/gui_app/pages/ui_YOLOPage/: ui_YOLOPage.c  ui_YOLOPage.h
lvgl/gui_app/pages/ui_snake_ai/: ui_snake_ai.c
lvgl/gui_app/pages/ui_template/: ui_templatePage.c  ui_templatePage.h
lvgl/utils/: system_para.conf
